--- a/editor.html
+++ b/editor.html
@@ -13,6 +13,7 @@
             height: 300px; /* Adjust the height of the grid as needed */
             border: 2px solid #000; /* Add a border for visualization */
             direction: rtl;
+            grid-auto-flow: column;
         }
         
         .grid-item {
